Folder z-index fix in IE/FF

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -230,6 +230,7 @@
 .navigation-list--children {
 	white-space: inherit;
 	z-index: 1000;
+	position: relative;
 	@media @bp-global-large {
 		left: 13px;
 		background:  contrast(@spare-color, darken(@spare-color, 8%), lighten(@spare-color, 16%));
